mobile responsiveness and styling complete

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <nav id="navbar" class="large-hide">
     <img src="/images/buttons/close-button.svg" alt="close button" id="close-navbar" onclick="closeSidebar()">
     <ul class="nav-links">
-        <li><a href="#" class="nav-link-item">About</a></li>
-        <li><a href="#" class="nav-link-item">Resume</a></li>
-        <li><a href="#" class="nav-link-item">Portfolio</a></li>
-        <li><a href="#" class="nav-link-item">Contact</a></li>
+        <li><a href="#about-wrapper" class="nav-link-item" onclick="closeSidebar()">About</a></li>
+        <li><a href="#" class="nav-link-item" onclick="closeSidebar()">Resume</a></li>
+        <li><a href="#portfolio-wrapper" class="nav-link-item" onclick="closeSidebar()">Portfolio</a></li>
+        <li><a href="#contact-wrapper" class="nav-link-item" onclick="closeSidebar()">Contact</a></li>
     </ul>
 </nav>
     
