--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <title>Nathan Jenkins Portfolio</title>
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png">
     <link rel="stylesheet" href="./style.css">
@@ -25,8 +25,9 @@
         <li><a href="#contact-wrapper" class="nav-link-item" onclick="closeSidebar()">Contact</a></li>
     </ul>
 </nav>
-    
+    <div class="home-wrapper-lg">
 <!-- Headshot -->
+ <div class="left-column">
     <section id="image-wrapper">
         <img src="./images/headshots/headshot-default.png" alt="Professional photo headshot" class="headshot base">
         <img src="./images/headshots/headshot-hover.jpg" alt="Professional photo headshot" class="headshot hover">
@@ -43,24 +44,24 @@
             <a href="https://www.linkedin.com/in/nathan-jenkins-17798b236/"><img src="./images/icons/linkedin-icon.png" alt="Instagram logo" class="social-media-icons"></a>
         </div>
     </section>
-
+</div>
 <!-- About -->
     <section id="about-wrapper">
         <h2>About Me <hr></h2>
         <p class="about-paragraph">I'm a passionate developer with 1.5 years of hands-on coding experience, eager to grow in the tech industry. I have a strong willingness to learn and thrive on solving problems and taking on new challenges. <br><br>
         I'm familiar with front-end technologies like HTML, CSS, JavaScript, and modern frameworks such as React, Vue, and Next.js. My projects have allowed me to work with technologies like Google OAuth and webhooks. On the back end, I've gained experience building APIs, working with databases, and creating structured backend models. <br><br>
         Outside of coding, I enjoy bouldering, boxing, music, and food! These activities keep me curious, focused, and energized both in and out of the tech space.</p>
-        <div id="about-button">
+        <div>
             <button class="button">Resume</button>
             <button class="button small-hide">Portfolio</button>
         </div>
-        <div class="social-links small-hide">
+        <div class="social-links social-links-about small-hide">
             <a href="https://www.instagram.com/nathanxjenkins?igsh=MWY0Zm9mZTV0MTVlbA%3D%3D&utm_source=qr"><img src="./images/icons/instagram-icon.png" alt="Instagram logo" class="social-media-icons"></a>
             <a href="https://github.com/njenkins2727"><img src="./images/icons/github-icon.png" alt="Instagram logo" class="social-media-icons"></a>
             <a href="https://www.linkedin.com/in/nathan-jenkins-17798b236/"><img src="./images/icons/linkedin-icon.png" alt="Instagram logo" class="social-media-icons"></a>
         </div>
     </section>
-
+</div>
 <!-- Porfolio -->
     <section id="portfolio-wrapper">
         <h2>Portfolio<hr></h2>
@@ -72,8 +73,10 @@
                 <p class="card-date">Jan 22, 2025</p>
                 <p>I used the Up Banking API to create a personal display for my own saving account. I used Vite + React, node.js + express.js, Up Bank API and Ngrok. I learnt the ins and outs of webhooks but opted for server-sent events.</p>
             </div>
+            <div class="button-display">
                 <button class="button">Github</button> 
                 <button class="button">Demo</button>
+            </div>
          </div>
          <!-- Card #2-->
          <div class="card">
@@ -83,31 +86,17 @@
                 <p class="card-date">Mar 20, 2024</p>
                 <p>My first venture into the world of Next.js, Google Authentication, MongoDB and Tailwindcss. I created this blog to share my love for cooking and to document delicious recipes for fellow food enthusiasts.</p>
             </div>
+            <div class="button-display">
                 <button class="button">Github</button> 
                 <button class="button">Demo</button>
+            </div>
          </div>
          <!-- Card #3-->
     </section>
        
 <!-- Contact -->
-    <!-- Curved blob background -->
-     <!-- <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-        <path fill="#606C38" d="M24.5,-29.9C37.6,-29.7,58.1,-32.8,68.8,-26.4C79.5,-20.1,80.4,-4.2,70.8,4.8C61.1,13.8,40.9,15.8,29.9,22.6C18.9,29.3,17.1,40.7,10,50.1C2.9,59.6,-9.5,67.2,-17.7,63.4C-25.9,59.6,-29.9,44.5,-40.4,34C-51,23.6,-68.1,17.9,-67.3,10.8C-66.5,3.7,-47.8,-4.8,-37,-12.1C-26.1,-19.3,-23.2,-25.4,-18.3,-29.3C-13.5,-33.3,-6.7,-35.2,-0.5,-34.4C5.7,-33.6,11.4,-30.1,24.5,-29.9Z" transform="translate(100 100)" />
-    </svg>
-
-    <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-  <path fill="#606C38" d="M46.5,-68.4C58.4,-64.8,64.7,-48.6,69,-33.2C73.4,-17.9,75.7,-3.3,74.2,11C72.7,25.4,67.4,39.6,57.3,47.6C47.2,55.7,32.3,57.6,18.4,61.1C4.4,64.5,-8.8,69.5,-23.7,70C-38.7,70.5,-55.5,66.6,-67.9,56.5C-80.4,46.4,-88.5,30.1,-81.8,17.3C-75,4.4,-53.4,-5,-40.2,-11.9C-27,-18.8,-22.3,-23.1,-17,-29.7C-11.7,-36.2,-5.9,-45.1,5.7,-54C17.3,-62.9,34.7,-71.9,46.5,-68.4Z" transform="translate(100 100)" />
-</svg>
-
-<svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-  <path fill="#606C38" d="M49.7,-66.6C63.5,-68.6,72.9,-53.1,76,-37.4C79,-21.6,75.6,-5.6,66,4.2C56.4,14.1,40.6,17.8,31.3,25.4C22,33,19.2,44.5,10.6,56.3C1.9,68.1,-12.6,80.3,-26.6,80.7C-40.6,81.1,-54,69.8,-62,56.2C-70,42.6,-72.4,26.7,-73.8,11.2C-75.1,-4.3,-75.3,-19.4,-66.3,-26.6C-57.3,-33.7,-39,-32.9,-26.4,-31.5C-13.8,-30,-6.9,-27.9,5.6,-36.6C18,-45.2,36,-64.6,49.7,-66.6Z" transform="translate(100 100)" />
-</svg>
-
-<svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-  <path fill="#606C38" d="M34.8,-51.5C46.5,-46.5,58.5,-39.4,60.1,-29.3C61.7,-19.3,53,-6.5,51.6,7.9C50.3,22.3,56.3,38.2,51.9,47.2C47.5,56.2,32.6,58.2,21.5,51.5C10.5,44.7,3.3,29.1,-1.3,20.4C-5.8,11.8,-7.7,10,-13.7,8.7C-19.6,7.5,-29.6,6.6,-31.6,3.5C-33.6,0.5,-27.7,-4.7,-25.9,-13.1C-24.1,-21.5,-26.4,-33.2,-22.8,-41.9C-19.2,-50.6,-9.6,-56.3,1,-57.8C11.5,-59.3,23,-56.5,34.8,-51.5Z" transform="translate(100 100)" />
-</svg> -->
-
 <section id="contact-wrapper">
+    <!-- Curved blob background -->
         <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" class="svg-blob">
           <path fill="#606C38" d="M45.3,-65.5C56.6,-63.3,62.1,-47.1,56.9,-33.4C51.7,-19.6,35.8,-8.4,28.5,0.2C21.2,8.8,22.4,14.6,21.5,22.1C20.5,29.6,17.2,38.6,11.6,40.9C6,43.1,-2,38.6,-16.7,41.4C-31.4,44.1,-52.8,54.2,-63.4,50.3C-74,46.4,-73.8,28.5,-73.4,12.3C-72.9,-3.9,-72.3,-18.3,-61.8,-22.8C-51.3,-27.4,-31,-22,-19.1,-23.8C-7.1,-25.7,-3.6,-34.8,6.7,-45.3C17,-55.8,34.1,-67.7,45.3,-65.5Z" transform="translate(100 100)" />
         </svg>
@@ -131,7 +120,7 @@
             <h5>PHONE</h5>
                 <p>0459314653</p>
         </div>
-        <button class="button small-hide">GET IN TOUCH</button>
+        <button class="button small-hide contact-button">GET IN TOUCH</button>
     </section>
 </body>
 </html>
