--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <img src="/images/buttons/close-button.svg" alt="close button" id="close-navbar" onclick="closeSidebar()">
     <ul class="nav-links">
         <li><a href="#about-wrapper" class="nav-link-item" onclick="closeSidebar()">About</a></li>
-        <li><a href="#" class="nav-link-item" onclick="closeSidebar()">Resume</a></li>
+        <li><a href="#" class="nav-link-item" onclick="closeSidebar()" download="./NathanJenkinsResume.pdf">Resume</a></li>
         <li><a href="#portfolio-wrapper" class="nav-link-item" onclick="closeSidebar()">Portfolio</a></li>
         <li><a href="#contact-wrapper" class="nav-link-item" onclick="closeSidebar()">Contact</a></li>
     </ul>
@@ -52,7 +52,7 @@
         I'm familiar with front-end technologies like HTML, CSS, JavaScript, and modern frameworks such as React, Vue, and Next.js. My projects have allowed me to work with technologies like Google OAuth and webhooks. On the back end, I've gained experience building APIs, working with databases, and creating structured backend models. <br><br>
         Outside of coding, I enjoy bouldering, boxing, music, and food! These activities keep me curious, focused, and energized both in and out of the tech space.</p>
         <div>
-            <button class="button">Resume</button>
+            <button class="button" onclick="window.open('./resume/NathanJenkinsResume.pdf')" download="NathanJenkinsResume.pdf">Resume</button>
             <a href="#portfolio-wrapper"><button class="button small-hide">Portfolio</button></a>
         </div>
         <div class="social-links social-links-about small-hide">
@@ -74,8 +74,8 @@
                 <p>I used the Up Bank API to create a real-time animated display for one of my savers account. I learnt all about webhooks and was able to work on and reinforce my backend knowledge. I used Vite + React, node.js + express.js, Up Bank API and Ngrok.</p>
             </div>
             <div class="button-display">
-                <button class="button" onclick="widnow.location.href='https://github.com/njenkins2727/up-saver-display'">Github</button> 
-                <button class="button" onclick="widnow.location.href='https://myupsaver.onrender.com/'">Demo</button></a> 
+                <button class="button" onclick="window.open('https://github.com/njenkins2727/up-saver-display')">Github</button> 
+                <button class="button" onclick="window.open('https://myupsaver.onrender.com/')">Demo</button></a> 
             </div>
          </div>
          <!-- Card #2-->
@@ -87,7 +87,7 @@
                 <p>I created this blog to share my love for cooking and to document delicious recipes for my girlfriend to follow. This was my first venture into the world of Next.js, Google Authentication, MongoDB and Tailwindcss. There were challenges, but each hurdle was an opportunity to grow and learn.</p>
             </div>
             <div class="button-display">
-                <button class="button" onclick="window.location.href='https://github.com/njenkins2727/recipe-blog-next'">Github</button>
+                <button class="button" onclick="window.open('https://github.com/njenkins2727/recipe-blog-next')">Github</button>
                 <button class="button">Demo</button> 
             </div>
          </div>
@@ -124,7 +124,7 @@
                 <h5>PHONE</h5>
                 <p>0459314653</p>
             </div>
-            <button class="button small-hide contact-button" onclick="window.location.href='mailto:njenkins2727@gmail.com'">GET IN TOUCH</button> 
+            <button class="button small-hide contact-button" onclick="window.open('mailto:njenkins2727@gmail.com')">GET IN TOUCH</button> 
     </div>
         </section>
 </body>
