changed hamburger button size, updated p tag text in about me section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <img src="/images/buttons/close-button.svg" alt="close button" id="close-navbar" onclick="closeSidebar()">
     <ul class="nav-links">
         <li><a href="#about-wrapper" class="nav-link-item" onclick="closeSidebar()">About</a></li>
-        <li><a href="#" class="nav-link-item" onclick="closeSidebar()" download="./NathanJenkinsResume.pdf">Resume</a></li>
+        <li><a href="/resume/NathanJenkinsResume.pdf" class="nav-link-item" onclick="closeSidebar()" download>Resume</a></li>
         <li><a href="#portfolio-wrapper" class="nav-link-item" onclick="closeSidebar()">Portfolio</a></li>
         <li><a href="#contact-wrapper" class="nav-link-item" onclick="closeSidebar()">Contact</a></li>
     </ul>
@@ -48,9 +48,9 @@
 <!-- About -->
     <section id="about-wrapper">
         <h2>About Me <hr></h2>
-        <p class="about-paragraph">I'm a passionate developer with 1.5 years of hands-on coding experience, eager to grow in the tech industry. I have a strong willingness to learn and thrive on solving problems and taking on new challenges. <br><br>
-        I'm familiar with front-end technologies like HTML, CSS, JavaScript, and modern frameworks such as React, Vue, and Next.js. My projects have allowed me to work with technologies like Google OAuth and webhooks. On the back end, I've gained experience building APIs, working with databases, and creating structured backend models. <br><br>
-        Outside of coding, I enjoy bouldering, boxing, music, and food! These activities keep me curious, focused, and energized both in and out of the tech space.</p>
+        <p class="about-paragraph">I'm an up-and-coming developer who's been hands on with coding for a year and a half now. I really enjoy building things and solving problems — especially when it's a bit out of my depth. That's where I feel like I learn the most.<br><br>
+            I'm comfortable with front-end tech like HTML, CSS, and JavaScript, and I've been getting deeper into frameworks like React, Vue, and Next.js. I've also worked on projects that use things like Google OAuth and webhooks, which taught me a lot about how things connect behind the scenes. On the back end, I've built APIs, worked with databases, and learned how to structure things properly so the pieces all make sense. <br><br>
+            When I'm not coding, you'll probably find me bouldering, boxing, playing music, or eating good food. Those are the things that keep me balanced and give me energy to bring back into my projects.</p>
         <div>
             <button class="button" onclick="window.open('./resume/NathanJenkinsResume.pdf')" download="NathanJenkinsResume.pdf">Resume</button>
             <a href="#portfolio-wrapper"><button class="button small-hide">Portfolio</button></a>
